--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <style>
-	body { padding: 0; margin: 0; background: #555; font: normal 12px/20px 'Lucida Grande', Arial, Sans-Serif; }
-	.wrapper { margin: 50px auto; width: 300px; }
+	body { padding: 0; margin: 0; background: #FFFAFA; font: normal 12px/20px 'Lucida Grande', Arial, Sans-Serif; }
+	.wrapper { margin-top : 50px; margin-left : auto; margin-right : auto; width : 500px;}
 	a { color: #CCC; }
 </style>
 <script src="/socket.io/socket.io.js"></script>
@@ -21,7 +21,9 @@ setInterval(function(){
     <div class="wrapper">
             <canvas width="500" height="500" id="game"></canvas>
 
-            <p>This is an experimental game board. Contribute <a href="https://github.com/anuary/ay-game" target="_blank">https://github.com/anuary/ay-game</a>.</p>
+            <p>This is an experimental game board. Contribute <a
+                href="https://github.com/dtx/ay-game"
+                target="_blank">https://github.com/dtx/ay-game</a>.</p>
     </div>
 </body>
 </html>
